--- a/trabalho02.bib
+++ b/trabalho02.bib
@@ -1,10 +1,12 @@
 @article{greenwade93,
     author  = "Luciano Stork",
     course = "Teoria da Informação e da Codificação"
-    title   = "Análise de Conjuntos Típicos e Identificação de Regiões Codificadoras em Sequências de DNA",
+    title   = "Análise de Cadeias de Markov e Taxa de Entropia com Dados Reais de Sequências de DNA",
     year    = "2023",
-    pages   = "6",
-    referencies = "ihttps://en.wikipedia.org/wiki/Hexokinase
+    pages   = "8",
+    referencies = "
+    https://doi.org/10.1002/9781118033296.ch17
+    https://en.wikipedia.org/wiki/Hexokinase
     https://www.sciencedirect.com/topics/biochemistry-genetics-and-molecular-biology/hexokinase
     https://www.sciencedirect.com/topics/earth-and-planetary-sciences/hexokinase
     https://proteopedia.org/wiki/index.php/Hexokinase
